x-widgets.css: scrollbar bug fix

--- a/www/x-widgets.css
+++ b/www/x-widgets.css
@@ -123,8 +123,8 @@
 	/* NOTE: Firefox won't set a line height lower than the font allows on <input>! */
 	--x-grid-cell-baseline    : 13px; /* PIXELS ONLY! */
 	--x-grid-cell-line-height : 18px; /* PIXELS ONLY! */
-	/* this is needed for Arial, must be zero for OpenSans */
-	--x-grid-cell-baseline-adjust-ff : 1;
+	/* sometimes Firefox needs some help aligning the basline... */
+	--x-grid-cell-baseline-adjust-ff : 0;
 
 }
 
@@ -1629,7 +1629,7 @@ textarea.x-editbox-input {
 }
 
 .x-item-progress-text {
-	position: absolute;
+	position: relative; /* so it stays on top of the absolute progress bar */
 	top: 0; left: 0; right: 0; bottom: 0;
 	text-align: center;
 }
@@ -2647,42 +2647,30 @@ body[small] {
 
 .x-grid-cells-view {
 	/* layout self */
-	flex: 1 0 0;               /* stretch to fill container but not more */
+	flex: 1 0;                 /* stretch to fill container but not more */
 	min-height: 0;
 	/* layout content */
 	display: grid;
 	overflow-x: auto;
-	overflow-y: scroll;        /* show scrollbars always */
+	overflow-y: auto;
 	position: relative;        /* anchor rows div */
 }
 
+/*
+	Fix the damn Chrome bug with custom-drawn scrollbars !!
+	50px has the nice side effect of gradually hiding the header when the grid
+	height gets too small.
+*/
+.x-grid-cells-view {
+	flex-basis: 50px;
+}
+
+.x-grid[auto_cols_w] > .x-grid-cells-view {
+	overflow-y: scroll;      /* avoid col resizing based on row count */
+}
+
 .x-grid[auto_h] > .x-grid-cells-view {
-	overflow-y: hidden;      /* it grows to fit contents, so no need for scrollbars */
-}
-
-.x-vgrid .x-grid-cells-view {
-	overflow-x: scroll;      /* show scrollbars always */
-	overflow-y: auto;        /* same remark about `auto` */
-}
-
-@supports (overflow-y:overlay) {
-
-	/*
-	not that we want to do this, but Chrome custom-styled scrollbars (that we
-	need for dark mode) are buggy when both vertical and horizontal scrollbars
-	are shown, so we use overlay (which only Chrome supports), but only for
-	scrolling rows. For scrolling columns, we use `auto` otherwise the overlay
-	scrollbar covers the last row and we can't click it.
-	*/
-
-	.x-grid-cells-view {
-		overflow-y: overlay;
-	}
-
-	.x-vgrid .x-grid-cells-view {
-		overflow-x: overlay;
-	}
-
+	overflow-y: hidden;      /* grid grows to fit contents, so no need for scrollbars */
 }
 
 .x-grid-cells {
@@ -3211,9 +3199,10 @@ body:not([theme=dark]) [theme=dark] {
 	border-color: transparent;
 }
 
-::-webkit-scrollbar
+[theme=dark]::-webkit-scrollbar,
+[theme=dark] ::-webkit-scrollbar
 {
-	/* enable browsers' lazy-work of custom-drawn scrollbars */
+	/* enable Chrome's lazy-work of custom-drawn scrollbars */
 	width : initial;
 	height: initial;
 }
